--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
+  firebase_crashlytics: ^5.0.0
+  firebase_messaging: ^16.0.0
+  cloud_firestore: ^6.0.0
+  firebase_storage: ^13.0.0
+  file_picker: ^10.3.2
+  url_launcher: ^6.3.0
+  cloud_functions: ^6.0.0
+  sign_in_button: ^4.0.1
+  google_sign_in: 6.1.4
+ 
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,9 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/coursebuddy_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
