--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,11 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+# org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+# android.useAndroidX=true
+# android.enableJetifier=true
+# ***************
+
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+kotlin.incremental=true
+org.gradle.parallel=true
+org.gradle.caching=true
