--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,16 +38,27 @@ dependencies:
   firebase_crashlytics: ^5.0.0
   firebase_messaging: ^16.0.0
   cloud_firestore: ^6.0.0
-  firebase_storage: ^13.0.0
-  file_picker: ^10.3.2
+  firebase_storage: ^13.0.1
+  # file_picker: ^10.3.2
   url_launcher: ^6.3.0
   cloud_functions: ^6.0.0
   sign_in_button: ^4.0.1
   logger: ^2.0.2
-  device_info_plus: ^9.0.0
+  device_info_plus: ^9.1.0
   pdf: ^3.10.4
   printing: ^5.11.1
- 
+  shared_preferences: ^2.2.2
+  shared_preferences_web: ^2.2.1
+  google_sign_in: ^5.2.4
+  table_calendar: ^3.1.2
+  # html_editor_enhanced: ^2.7.1
+  # flutter_highlight: ^0.7.0
+  # flutter_html: ^2.2.1
+
+  flutter_html: ^3.0.0
+  flutter_highlight: ^0.7.0
+  file_picker: ^10.3.2
+  
 
 dev_dependencies:
   flutter_test:
