--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: coursebuddy
-description: "A new Flutter project."
+description: "Hands-on coding guide."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -60,6 +60,7 @@ dependencies:
   liquid_progress_indicator: ^0.4.0
   video_player: ^2.9.1
   intl: ^0.20.2
+  flutter_markdown: ^0.7.7+1
 
   
 
@@ -73,6 +74,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1 # (or latest version)
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png" # replace with your icon path
+
   flutter_native_splash: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
@@ -99,6 +107,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/coursebuddy_logo.png
+    - web/icons/Icon-192.png
+    - web/icons/Icon-512.png
+    - web/icons/Icon-maskable-192.png
+    - web/icons/Icon-maskable-512.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
